# project-initializer

./: .gitignore  .gitmodules  .markdownlint.yml  .pre-commit-config.yaml  README.md  REUSE.toml  project-initializer.example.toml  pyproject.toml  specs.md
continuous-integration/: do-static-analysis.sh  generate-build-artifacts.install-system-deps.sh
src/project_initializer/: __init__.py  automation.py  cli.py  config.py  github_api.py  gitlab_api.py  telegram_api.py  validation.py
tests/: test_automation.py  test_cli.py  test_config.py  test_github_api.py  test_gitlab_api.py  test_telegram_api.py  test_validation.py
